--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -34,7 +34,7 @@
                 class="w-full border border-white/30 bg-white/10 text-white placeholder-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-white">
         </div>
         
-        <a href="{{ url_for('routes.SERVICES')}}"
+        <a href="{{ url_for('routes.BARBER')}}"
             type="submit" 
             id="confirmBtn"
             class="flex-1 flex justify-center items-center"
