--- a/app/templates/services.html
+++ b/app/templates/services.html
@@ -116,11 +116,24 @@
         <h3 class="text-3xl text-center font-faustina font-semibold mb-4">
             Wednesday <br> August 14, 2025
         </h3>
-        <div class="w-full flex justify-center">
-            <button class="border border-white py-2 px-4 rounded flex items-center justify-center gap-2">
-                <span class="w-3 h-3 rounded-full bg-red-400"></span>9:00 AM
-            </button>
-        </div>
+
+              <div class="flex justify-center">
+                <div class="relative h-[200px] w-[180px] bg-black rounded-[25px] border-4 border-white">
+                    <!-- Image (blurs on hover) -->
+                    <img
+                        src="{{ url_for('static', filename='images/emel.jpg') }}"
+                        alt="Gallery Image"
+                        class="h-full w-full object-cover rounded-[20px] transition duration-500 group-hover:blur-sm"
+                    />
+                    <!-- Name label -->
+                        <div class="absolute bottom-[10px] left-[10px] text-white text-lg font-normal"
+                            style="font-family:'Faustina', serif; text-shadow: 4px 4px 6px rgba(0,0,0,0.8);">
+                            Emel Calomos
+                    </div>
+                </div>
+                </div>
+
+
         <h4 class="font-light text-[10px] mt-5">•Please provide your FULL NAME.</h4>
         <h4 class="font-light text-[10px]">•See to it that you're 100% sure before booking an appointment.</h4>
         <h4 class="font-light text-[10px]">•15 minutes late will be canceled to accommodate next client/walk-in.</h4>
