--- a/app/static/css/calendar.css
+++ b/app/static/css/calendar.css
@@ -22,6 +22,11 @@
     color: white;
 }
 
+.time {
+    background-color: #ffffff; /* Tailwind amber-500 */
+    color: rgb(0, 0, 0);
+}
+
 .today {
     border: 2px solid #1a1a1b; /* Tailwind blue-500 */
 }
