--- a/app/templates/boboy-calendar.html
+++ b/app/templates/boboy-calendar.html
@@ -38,28 +38,28 @@
     
     <!-- Time Slot Buttons -->
     <div class="grid grid-cols-2 gap-3">
-        <button class="appointment-btn border border-white py-2 px-4 rounded flex items-center justify-center gap-2" data-time="09:00">
+        <button id="9TimeSlot" class="appointment-btn border border-white py-2 px-4 rounded flex items-center justify-center gap-2" data-time="09:00">
             9:00 AM
         </button>
-        <button class="appointment-btn border border-white py-2 px-4 rounded flex items-center justify-center gap-2" data-time="10:00">
+        <button id="10TimeSlot" class="appointment-btn border border-white py-2 px-4 rounded flex items-center justify-center gap-2" data-time="10:00">
            10:00 AM
         </button>
-        <button class="appointment-btn border border-white py-2 px-4 rounded flex items-center justify-center gap-2" data-time="11:00">
+        <button id="11TimeSlot" class="appointment-btn border border-white py-2 px-4 rounded flex items-center justify-center gap-2" data-time="11:00">
             11:00 AM
         </button>
-        <button class="appointment-btn border border-white py-2 px-4 rounded flex items-center justify-center gap-2" data-time="01:00">
+        <button id="1TimeSlot" class="appointment-btn border border-white py-2 px-4 rounded flex items-center justify-center gap-2" data-time="13:00">
            1:00 PM
         </button>
-        <button class="appointment-btn border border-white py-2 px-4 rounded flex items-center justify-center gap-2" data-time="02:00">
+        <button id="2TimeSlot" class="appointment-btn border border-white py-2 px-4 rounded flex items-center justify-center gap-2" data-time="14:00">
            2:00 PM
         </button>
-        <button class="appointment-btn border border-white py-2 px-4 rounded flex items-center justify-center gap-2" data-time="03:00">
+        <button id="3TimeSlot" class="appointment-btn border border-white py-2 px-4 rounded flex items-center justify-center gap-2" data-time="15:00">
            3:00 PM
         </button>
-        <button class="appointment-btn border border-white py-2 px-4 rounded flex items-center justify-center gap-2" data-time="04:00">
+        <button id="4TimeSlot" class="appointment-btn border border-white py-2 px-4 rounded flex items-center justify-center gap-2" data-time="16:00">
             4:00 PM
         </button>
-        <button class="appointment-btn border border-white py-2 px-4 rounded flex items-center justify-center gap-2" data-time="05:00">
+        <button id="5TimeSlot" class="appointment-btn border border-white py-2 px-4 rounded flex items-center justify-center gap-2" data-time="17:00">
             5:00 PM
         </button>
     </div>
@@ -67,9 +67,9 @@
     <!-- Proceed button OUTSIDE the grid -->
      <div class="flex justify-center">
     <a id="proceedBtn-emel"
-        href="{{ url_for('routes.LOGIN') }}"
+        href="{{ url_for('routes.RECEIPT') }}"
         class="hidden mt-4 w-full bg-blue-500 text-white py-2 px-4 rounded text-center">
-        Proceed to Login
+        Confirm Appointment
     </a>
     </div>
 
@@ -91,7 +91,7 @@
                 <div class="relative h-[200px] w-[180px] bg-black rounded-[25px] border-4 border-white">
                     <!-- Image (blurs on hover) -->
                     <img
-                        src="{{ url_for('static', filename='images/emel.jpg') }}"
+                        src="{{ url_for('static', filename='images/boboy.jpg') }}"
                         alt="Gallery Image"
                         class="h-full w-full object-cover rounded-[20px] transition duration-500 group-hover:blur-sm"
                     />
@@ -115,7 +115,8 @@
                 </div>
               </div>
 
-              <h3 id="selectedDateAppointment" class="text-3xl text-center font-faustina font-semibold mb-4"> Wednesday <br> August 14, 2025</h3>
+              <h3 id="selectedDateAppointment" class="text-3xl text-center font-faustina font-semibold"> Wednesday <br> August 14, 2025</h3>
+              <h4 id="timeSlot" class="text-4xl text-center font-faustina font-semibold mb-4">-Select Time-</h4>
 
         
         <h4 class="font-light text-[10px] mt-5">•Please provide your FULL NAME.</h4>
@@ -129,6 +130,7 @@
 
 </section>
 <script src="{{ url_for('static', filename='js/calendar.js') }}"></script>
+
 </body>
 
 <style>
